# tp_sem1_c-cpp

./: .travis.yml  README.md
iz_1/: CMakeLists.txt  main.c
iz_1/Errors/: error_code.h  error_message.c  error_message.h
iz_1/Geometry/: geometry_operations.c  geometry_operations.h  point3D.c  point3D.h  tetrahedron.c  tetrahedron.h
iz_1/Task_manager/: task_manager.c  task_manager.h
iz_1/Tests/: test.cpp  unit_tests.cpp
iz_1/ci/travis/: .install-linux.sh.swp  install-linux.sh
iz_2/: CMakeLists.txt  main.c
iz_2/Algorithm_calculate_sum/: my_math.c  my_math.h  parallel_sum.c  parallel_sum.h  sequential_sum.c  sequential_sum.h
iz_2/Config/: configuration.h
iz_2/Errors/: error_code.h  error_message.c
iz_2/File/: bin_file_routines.c  bin_file_routines.h
iz_2/Task_manager/: task_manager.c  task_manager.h
iz_2/Tests/: stress_test.cpp  test.cpp  unit_test.cpp
iz_2/ci/travis/: install-linux.sh
